--- a/CaregiverProject/CaregiverProject/Info.plist
+++ b/CaregiverProject/CaregiverProject/Info.plist
@@ -57,6 +57,19 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLName</key>
+			<string>com.UCB.TCC.CaregiverProject</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>login</string>
+			</array>
+		</dict>
+	</array>
 	<key>UISupportedInterfaceOrientations~ipad</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
