Add Calendar Module to project

--- a/CaregiverProject/Podfile
+++ b/CaregiverProject/Podfile
@@ -11,6 +11,7 @@ target 'CaregiverProject' do
   pod 'Firebase/Database'
   pod 'Firebase/Analytics'
   pod 'Firebase/Auth'
+  pod 'FSCalendar'
 
   target 'CaregiverProjectTests' do
     inherit! :search_paths
